# pathfinder-unity-fun

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  build_plugin.bat  test_dylib.py
build-bindings/: Cargo.toml
build-bindings/src/: main.rs
csharpbindgen/: Cargo.toml
csharpbindgen/src/: error.rs  ignores.rs  lib.rs
csharpbindgen/src/snapshots/: tests__main_example.snap
src/: fake_device.rs  gl_util.rs  lib.rs  logging.rs  pathfinder_unity_api.rs  render.rs  unity_interfaces.rs
unity-project/Assets/: DeletePlayerPrefsScript.cs  GlobalState.cs  GlobalStateScript.cs  InputScript.cs  MainCameraOverlayScript.cs  NewBehaviourScript.cs  PF.cs  PathfinderCameraScript.cs  RenderTexture.renderTexture  RenderTextureCameraScript.cs  RenderTextureMaterial.mat  RotateCube.cs  RotateCubeScript.cs  SmokeTestScript.cs
unity-project/Assets/Pathfinder/: PF.cs  PFCanvas.cs  PFCanvasFontContext.cs  PFFillStyle.cs  PFPath.cs  PFPlugin.cs  PFPluginExports.cs  PFString.cs  PFUnity.cs  PFUnityConv.cs  PathfinderAssembly.asmdef
unity-project/Assets/Scenes/: SampleScene.unity
unity-project/ProjectSettings/: ProjectSettings.asset
