[package]
name = "pathfinder-c-api-fun"
version = "0.1.0"
authors = ["Atul Varma <varmaa@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["dylib"]

[dependencies]
rustache = "0.1"

[dependencies.pathfinder_geometry]
path = "pathfinder/geometry"

[dependencies.pathfinder_canvas]
path = "pathfinder/canvas"

[dependencies.pathfinder_renderer]
path = "pathfinder/renderer"

[dependencies.pathfinder_gpu]
path = "pathfinder/gpu"
