[package]
name = "pathfinder-c-api-fun"
version = "0.1.0"
authors = ["Atul Varma <varmaa@gmail.com>"]
edition = "2018"
build = "build.rs"

[lib]
crate-type = ["dylib"]

[dependencies]
log = "0.4"
libc = "0.2"
font-kit = "0.2"
foreign-types = "0.3"
enum-primitive-derive = "0.1.2"
num-traits = "0.2.8"
winapi = { version = "0.3", features = ["wingdi", "libloaderapi"] }

# NOTE: This *must* be the same version of gl that pathfinder_gl uses, or
# else it will be loaded side-by-side and its state will be separate
# from pathfinder_gl's, which will make pathfinder_gl's version panic
# because it won't see the GL functions we've loaded in our version.
gl = "0.6"

[dependencies.pathfinder_geometry]
path = "pathfinder/geometry"

[dependencies.pathfinder_canvas]
path = "pathfinder/canvas"

[dependencies.pathfinder_content]
path = "pathfinder/content"

[dependencies.pathfinder_renderer]
path = "pathfinder/renderer"

[dependencies.pathfinder_gpu]
path = "pathfinder/gpu"

[dependencies.pathfinder_gl]
path = "pathfinder/gl"

[dependencies.pathfinder_simd]
path = "pathfinder/simd"
